link_to and first function_rc usage :)

--- a/app/views/pages/items.liquid
+++ b/app/views/pages/items.liquid
@@ -1,1 +1,6 @@
-{{ context.params }}
+{% liquid
+  assign id = context.params.slug2 | split: '-' | last
+
+  include 'lib/queries/items/find', id: id
+  include 'theme/simple/items/show', item: context.exports.item
+%}
