--- a/app/views/pages/items/create.liquid
+++ b/app/views/pages/items/create.liquid
@@ -15,7 +15,7 @@ method: post
 
       include 'lib/commands/events/create', type: 'item_created', actor_id: context.current_user.id, object_id: context.exports.object.id
 
-      assign url = '/items/show?id=' | append: object.id
+      function_rc url = 'link_to', item: object
       include 'redirect_to', url: url, notice: 'app.items.created'
     endif
   else
