--- a/app/views/partials/lib/queries/orders/find.liquid
+++ b/app/views/partials/lib/queries/orders/find.liquid
@@ -1,4 +1,5 @@
 {% liquid
   graphql order  = 'orders/search', id: id, limit: 1 | fetch: 'orders' | fetch: 'results' | first
   export order
+  return_rc order
 %}
