--- a/app/views/partials/theme/simple/dashboard/orders/actions.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/actions.liquid
@@ -10,14 +10,10 @@
   {% endif %}
 
   {% if order.properties.paid_at == null and role == 'buyer' %}
-    <form action="/order_statuses/create" method="post" class="mt-2">
-      {% include 'authenticity_token' %}
-      <input type="hidden" name="status" value="app.order_statuses.paid"/>
-      <input type="hidden" name="order_id" value="{{ order.id }}"/>
-
-      <button class="button button-sm">{{ 'app.pay' | t }}</button>
-    </form>
-  {% endif %}
+    <a href="/orders/review?order_id={{order.id}}" class="button button-sm">
+      {{ 'app.pay' | t }}
+    </a>
+ {% endif %}
 {% endif %}
 
 {% if order.status.name == 'app.order_statuses.placed' %}
