--- a/modules/stripe/public/views/partials/lib/webhook_endpoints/create/call.liquid
+++ b/modules/stripe/public/views/partials/lib/webhook_endpoints/create/call.liquid
@@ -1,7 +1,7 @@
 {% liquid
-  function_rc response = 'modules/stripe/lib/stripe_webhook/create/call'
+  function_rc response = 'modules/stripe/lib/stripe_webhook/create/call', event: event, path: path
   parse_json webhook
-    include 'modules/stripe/lib/webhook_endpoints/create/build', response: response
+    include 'modules/stripe/lib/webhook_endpoints/create/build', response: response, event: event
   endparse_json
   if webhook.valid
     graphql result = 'modules/stripe/webhook_endpoint_create', args: webhook
