--- a/app/views/pages/admin.html.liquid
+++ b/app/views/pages/admin.html.liquid
@@ -6,6 +6,13 @@
   include 'lib/queries/orders/search', limit: 10
   include 'lib/queries/items/search', limit: 10
   include 'lib/queries/activities/search', feed: "system", feed_id: "1"
+  include 'lib/queries/categories', limit: 10
 
-  include 'theme/simple/admin/recent', items: context.exports.items, users: context.exports.users, orders: context.exports.orders, activities: context.exports.activities
+%}
+{% include 'theme/simple/admin/recent',
+     items: context.exports.items,
+     users: context.exports.users,
+     orders: context.exports.orders,
+     activities: context.exports.activities,
+     categories: context.exports.lib.categories
 %}
