--- a/app/views/pages/orders/create.liquid
+++ b/app/views/pages/orders/create.liquid
@@ -27,7 +27,7 @@ method: post
       break
     endif
   else
-    include 'theme/simple/orders/new', item: context.exports.item, order: context.exports.order
+    include 'theme/simple/orders/new', item: context.exports.item, order: context.exports.object
   endif
 
 %}
