--- a/app/views/partials/theme/simple/admin/recent.liquid
+++ b/app/views/partials/theme/simple/admin/recent.liquid
@@ -1,7 +1,7 @@
 <div class="flex w-full">
   <div class="w-3/4">
     <h3 class="mb-3 text-lg font-medium text-gray-900 title-font">Recent items</h3>
-    <h2 class="mb-6 text-3xl font-medium">users</h2>
+    <h2 class="mb-6 text-3xl font-medium">{% echo 'app.users.list' | t %}</h2>
     <table class="table-auto w-full">
       {% for user in users.results %}
         <tr>
@@ -12,7 +12,7 @@
       {% endfor %}
     </table>
 
-    <h2 class="mb-6 text-3xl font-medium">items</h2>
+    <h2 class="mb-6 text-3xl font-medium">{% echo 'app.items.list' | t %}</h2>
     <table class="table-auto w-full">
       {% for item in items.results %}
         <tr>
@@ -25,7 +25,7 @@
       {% endfor %}
     </table>
 
-    <h2 class="mb-6 text-3xl font-medium">orders</h2>
+    <h2 class="mb-6 text-3xl font-medium">{% echo 'app.orders.list' | t %}</h2>
     <table class="table-auto w-full">
       {% for order in orders.results %}
         <tr>
@@ -36,6 +36,8 @@
         </tr>
       {% endfor %}
     </table>
+
+    {% include 'theme/simple/admin/categories', list: categories %}
   </div>
   <div class="w-1/4">
     {% include 'theme/simple/admin/activity_log', activities: activities %}
