--- a/app/views/partials/theme/simple/layout/main.liquid
+++ b/app/views/partials/theme/simple/layout/main.liquid
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container flex flex-col min-h-screen">
   {% include 'theme/simple/layout/header' %}
 
-  <main>
+  <main class="flex-1">
     {% include 'lib/flash/display' %}
 
     {{ content_for_layout }}
