Add some metatags

--- a/app/views/layouts/application.html.liquid
+++ b/app/views/layouts/application.html.liquid
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     {% include 'theme/simple/layout/head' %}
+    {% yield 'item_metatags' %}
     {% yield 'custom_styles' %}
     <script>window.cdnUrl = '{{ "" | asset_url }}';</script>
   </head>
