--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -1,3 +1,7 @@
+{% content_for item_metatags %}
+  {% include 'theme/simple/items/metatags', item: item %}
+{% endcontent_for %}
+
 <section class="overflow-hidden text-gray-700 body-font">
   <div class="container">
     <div class="flex flex-wrap">
