--- a/app/views/pages/items/delete.liquid
+++ b/app/views/pages/items/delete.liquid
@@ -12,7 +12,7 @@ method: post
   else
     assign error = context.exports.object.errors.base[0]
 
-    function_rc item_url = 'link_to', item: item
+    function_rc item_url = 'link_to', item: context.exports.item
     include 'redirect_to', url: item_url, error: error
   endif
 %}
