--- a/app/views/partials/theme/simple/dashboard/items/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/items/index.liquid
@@ -1,7 +1,7 @@
 <h1 class="mb-6 text-3xl font-medium">
   <a href="/dashboard">{{ 'app.dashboard' | t }}</a>
   / {{ 'app.' | append: role | t }}
-  / {{ 'app.items' | t }}
+  / {{ 'app.items.list' | t }}
 </h1>
 
 <section class="text-gray-700 body-font">
