--- a/app/views/partials/theme/simple/layout/head.liquid
+++ b/app/views/partials/theme/simple/layout/head.liquid
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta content="authenticity_token" name="csrf-param">
-<meta content="{{ form_authenticity_token }}" name="csrf-token">
+<meta content="{{ context.authenticity_token }}" name="csrf-token">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="description" content="MVP Marketplace - buy & sell">
 
