--- a/app/views/partials/theme/simple/admin/recent.liquid
+++ b/app/views/partials/theme/simple/admin/recent.liquid
@@ -1,3 +1,10 @@
+<div class="w-full">
+  <h2 class="mb-3 text-lg font-medium text-gray-900 title-font">
+    <a href='/marketplace_setup'>
+      Marketplace Setup
+    </a>
+  </h2>
+</div>
 <div class="flex w-full">
   <div class="w-3/4">
     <h3 class="mb-3 text-lg font-medium text-gray-900 title-font">Recent items</h3>
