--- a/modules/stripe/public/views/partials/lib/webhooks/checkout_session_completed/call.liquid
+++ b/modules/stripe/public/views/partials/lib/webhooks/checkout_session_completed/call.liquid
@@ -1,8 +1,7 @@
 {% liquid
-  include 'modules/stripe/lib/webhooks/checkout_session_completed/build'
-  log context.exports.object, type: 'webhooks/checkout_session_completed/call'
-  include 'modules/stripe/lib/webhooks/checkout_session_completed/validate', object: context.exports.object
-  if context.exports.object.valid
-    echo context.exports.object
+  function_rc object = 'modules/stripe/lib/webhooks/checkout_session_completed/build'
+  function_rc object = 'modules/stripe/lib/webhooks/checkout_session_completed/validate', object: object
+  if object.valid
+    echo object
   endif
 %}
