fix search keyword

--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -5,7 +5,7 @@
       name="k"
       id="k"
       type="text"
-      value="{{ query.k }}"
+      value="{{ query.keyword }}"
      />
   </div>
 
