--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -5,14 +5,19 @@
 <section class="overflow-hidden text-gray-700 body-font">
   <div class="container">
     <div class="flex flex-wrap">
-      <div class="relative w-full md:w-1/2">
-        {%- assign dummy_url = 'https://dummyimage.com/800x4:3/eee/000&text=' | append: item.name %}
-        {%- assign cover_url = item.photos.last.photo.url | default: dummy_url %}
-        <img alt="{{ item.name }}" class="object-center w-full h-full rounded"
-          src="{{ cover_url }}">
+      <div class="w-full md:w-1/2">
+        <div class="relative glider-contain">
+          <div class="overflow-x-hidden glider" glider>
+            {% for p in item.photos %}
+              <div><img alt="{{ item.name }}" src="{{ p.photo.url }}" class="object-cover w-full" loading="lazy"></div>
+            {% endfor %}
+          </div>
 
-        <img alt="{{ item.type }}" class="absolute top-0 left-0 w-10 h-10 mt-2 ml-2 opacity-50"
-          src="{{ 'images/icons/' | append: item.cover_photo | append: '.svg' | asset_url }}" />
+          <button role="button" aria-label="Previous" class="glider-prev">&nbsp;</button>
+          <button role="button" aria-label="Next" class="glider-next">&nbsp;</button>
+
+          <div role="tablist" class="py-4 glider-dots"></div>
+        </div>
       </div>
 
       <div class="w-full mt-6 lg:w-1/2 lg:pl-10 lg:py-6 lg:mt-0">
