--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -6,18 +6,24 @@
   <div class="container">
     <div class="flex flex-wrap">
       <div class="w-full md:w-1/2">
-        <div class="relative glider-contain">
-          <div class="overflow-x-hidden glider" glider>
-            {% for p in item.photos %}
-              <div><img alt="{{ item.name }}" src="{{ p.photo.url }}" class="object-cover w-full" loading="lazy"></div>
-            {% endfor %}
+        {% if item.photos.size > 1 %}
+          <div class="relative glider-contain">
+            <div class="overflow-x-hidden glider" glider>
+              {% for p in item.photos %}
+                <div><img alt="{{ item.name }}" src="{{ p.photo.url }}" class="object-cover w-full" loading="lazy"></div>
+              {% endfor %}
+            </div>
+
+            <button role="button" aria-label="Previous" class="glider-prev">&nbsp;</button>
+            <button role="button" aria-label="Next" class="glider-next">&nbsp;</button>
+
+            <div role="tablist" class="py-4 glider-dots"></div>
           </div>
-
-          <button role="button" aria-label="Previous" class="glider-prev">&nbsp;</button>
-          <button role="button" aria-label="Next" class="glider-next">&nbsp;</button>
-
-          <div role="tablist" class="py-4 glider-dots"></div>
-        </div>
+        {% else %}
+          {%- assign dummy_url = 'https://dummyimage.com/800x4:3/eee/000&text=' | append: item.name %}
+          {%- assign cover_url = item.photos.last.photo.url | default: dummy_url %}
+          <img alt="{{ item.name }}" class="object-center w-full h-full rounded" src="{{ cover_url }}">
+        {% endif %}
       </div>
 
       <div class="w-full mt-6 lg:w-1/2 lg:pl-10 lg:py-6 lg:mt-0">
