--- a/modules/stripe/public/views/partials/lib/account/update/validate.liquid
+++ b/modules/stripe/public/views/partials/lib/account/update/validate.liquid
@@ -1,17 +1,17 @@
 {% liquid
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
-  assign object = object | add_hash_key: 'account_state', 'pending'
+  assign object = object | add_hash_key: 'state', 'pending'
   if object.raw_data.payouts_enabled == true and object.raw_data.charges_enabled == true
-    assign object = object | add_hash_key: 'account_state', 'verified'
+    assign object = object | add_hash_key: 'state', 'verified'
   endif
 
   if object.id == blank
     include 'lib/register_error', contract: c, field_name: 'id', key: 'app.errors.not.be_empty'
   endif
 
-  if object.account_state == blank
-    include 'lib/register_error', contract: c, field_name: 'account_state', key: 'app.errors.not.be_empty'
+  if object.state == blank
+    include 'lib/register_error', contract: c, field_name: 'state', key: 'app.errors.not.be_empty'
   endif
 
   assign object = object | add_hash_key: 'valid', c.valid
