--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -36,7 +36,7 @@
         </h1>
 
         <div class="flex flex-wrap mb-4">
-          <ul class="flex w-full tags">
+          <ul class="flex w-full categories">
             <li><span class="font-semibold">category: </span></li>
             <li class="ml-2">{{ 'categories.' | append: item.category | t }}</li>
           </ul>
