--- a/app/views/partials/theme/simple/items/form.liquid
+++ b/app/views/partials/theme/simple/items/form.liquid
@@ -28,7 +28,7 @@
       </div>
 
       <div class="mt-3">
-        <label class="block" for="cover_photo">Category</label>
+        <label class="block" for="category">Category</label>
         <select class="form-select" id="category" name="item[category]">
           {% for category in lib.categories %}
             {% assign ident = category | split: '/' | size | minus: 1 | times: 2 %}
