--- a/app/views/pages/marketplace_setup/index.liquid
+++ b/app/views/pages/marketplace_setup/index.liquid
@@ -3,5 +3,7 @@ slug: marketplace_setup
 ---
 {% liquid
   include 'lib/must_be_superadmin'
-  include 'theme/simple/marketplace_setup/index'
+
+  function_rc config = 'lib/marketplace_setup/current_config'
+  include 'theme/simple/marketplace_setup/index', object: config
 %}
