--- a/app/views/partials/lib/marketplace_setup/validate.liquid
+++ b/app/views/partials/lib/marketplace_setup/validate.liquid
@@ -1,19 +1,15 @@
 {% liquid
-  assign valid = true
-  assign errors = '{}' | parse_json
+  assign c = '{ "errors": {}, "valid": true }' | parse_json
   assign keys = 'mpo_fee_percent,stripe_sk_key,stripe_pk_key,stripe_client_id' | split: ','
 
   for key in keys
     if object[key] == null or object[key] == empty
-      include 'lib/register_error', contract: errors, field_name: key, key: 'app.errors.blank'
+      include 'lib/register_error', contract: c, field_name: key, key: 'app.errors.blank'
     endif
   endfor
 
-  if errors != empty
-    assign valid = false
-  endif
+  assign object = object | add_hash_key: 'valid', c.valid
+  assign object = object | add_hash_key: 'errors', c.errors
 
   export object
-  export errors, namespace: "object"
-  export valid,  namespace: "object"
 %}
