--- a/app/views/partials/theme/simple/404.liquid
+++ b/app/views/partials/theme/simple/404.liquid
@@ -1,3 +1,3 @@
-<div class='text-3xl flex-wrap text-center items-center w-full'>
-  <img class="" alt="" src="{{ 'images/icons/404.svg' | asset_url }}"/>
+<div class='flex-wrap items-center w-full text-3xl text-center'>
+  <img alt="Page missing" src="{{ 'images/404.svg' | asset_url }}"/>
 </div>
