Move bank accounts to selling

--- a/modules/stripe/public/views/partials/lib/webhook_endpoints/create/call.liquid
+++ b/modules/stripe/public/views/partials/lib/webhook_endpoints/create/call.liquid
@@ -5,6 +5,8 @@
   endparse_json
   if webhook.valid
     graphql result = 'modules/stripe/webhook_endpoint_create', args: webhook
-    log result, type: 'webhooks/create model_create'
+    log result, type: 'webhook_endpoints/create model_create'
+  else
+    log webhook, type: 'webhook_endpoints/create invalid'
   endif
 %}
