--- a/app/views/partials/theme/simple/home/sort_form.liquid
+++ b/app/views/partials/theme/simple/home/sort_form.liquid
@@ -1,7 +1,5 @@
 <div class="flex flex-wrap my-2">
-  <div class="w-full md:flex-1 md:w-auto">
-  </div>
-
+  <div class="w-full md:flex-1 md:w-auto"></div>
   <div class="w-full my-2 md:my-0 md:w-auto">
     <select class="w-full form-select" id="sort" name="sort">
       <option value="" class="text-gray-600"> --sort-- </option>
