--- a/app/views/partials/lib/search/main.liquid
+++ b/app/views/partials/lib/search/main.liquid
@@ -2,7 +2,8 @@
   graphql search_form = 'search/search_form' | dig: "models" | dig: "results" | first
 
   assign sort_options = 'lib.sort_options' | t
-  assign search_form = search_form | add_hash_key: "sort_options", sort_options
+  assign h = '{}' | parse_json
+  assign search_form = search_form | default: h | add_hash_key: "sort_options", sort_options
 
   export search_form
 %}
