--- a/app/views/partials/theme/simple/items/metatags.liquid
+++ b/app/views/partials/theme/simple/items/metatags.liquid
@@ -4,7 +4,7 @@
 <meta property="og:title" content='{{ item.name }}' />
 <meta property="og:description" content='{{ item.description }}' />
 <meta property="og:url" content="{{ context.location.url }}" />
-<meta property="og:site_name" content="platformOS Documentation" />
+<meta property="og:site_name" content="{{ 'app.title' | t }}" />
 <meta property="article:section" content="{{ item.category }}" />
 
 <meta property="article:published_time" content="{{ item.created_at }}" />
