--- a/app/views/partials/lib/commands/items/create/build.liquid
+++ b/app/views/partials/lib/commands/items/create/build.liquid
@@ -8,7 +8,7 @@
     "description": {{ object.description | default: "" | json }},
     "type":        {{ object.type | default: "" | json }},
     "category":    {{ object.category | default: "" | json }},
-    "price":       {{ object.price | to_positive_integer: 1 }},
+    "price":       {{ object.price | to_positive_integer: 1 | times: 100 }},
     "uuid":        {{ object.uuid | json }}
   }
 {% endparse_json %}
