--- a/app/views/partials/lib/commands/items/create/check.liquid
+++ b/app/views/partials/lib/commands/items/create/check.liquid
@@ -1,4 +1,4 @@
-{% assign MINIMAL_PRICE = 10 %}
+{% assign MINIMAL_PRICE = 10 | times: 100 %}
 
 {% liquid
   assign c = '{ "errors": {}, "valid": true }' | parse_json
@@ -12,7 +12,8 @@
   endif
 
   if object.price <  MINIMAL_PRICE
-    assign msg = 'app.errors.too_little' | t: value: MINIMAL_PRICE
+    assign min_price = MINIMAL_PRICE | pricify_cents
+    assign msg = 'app.errors.too_little' | t: value: min_price
     include 'lib/register_error', contract: c, field_name: 'price', message: msg
   endif
 
