--- a/app/views/partials/theme/simple/home/sort_form.liquid
+++ b/app/views/partials/theme/simple/home/sort_form.liquid
@@ -1,8 +1,13 @@
-<div class="flex flex-wrap my-2">
-  <div class="w-full md:flex-1 md:w-auto"></div>
-  <div class="w-full my-2 md:my-0 md:w-auto">
+<div class="flex items-center my-2">
+
+  <div class="text-gray-700">
+    <span>{{ 'app.total_entries' | t }} {{ items.total_entries }}</span>
+  </div>
+
+  <div class="ml-auto">
+    <label for="sort" class="text-right">Sort by</label>
     <select class="w-full form-select" id="sort" name="sort">
-      <option value="" class="text-gray-600"> --sort-- </option>
+      <option value="" class="text-gray-700">Choose sorting</option>
       {% for s in filters.sort_options %}
         <option value="{{ s[0] }}" {% if query.sort == s[0] %}selected{% endif %}>{{ s[1] }}</option>
       {% endfor %}
