Fix label color

--- a/app/views/partials/theme/simple/home/sort_form.liquid
+++ b/app/views/partials/theme/simple/home/sort_form.liquid
@@ -5,7 +5,7 @@
   </div>
 
   <div class="ml-auto">
-    <label for="sort" class="text-right">Sort by</label>
+    <label for="sort" class="text-right text-gray-700">Sort by</label>
     <select class="w-full form-select" id="sort" name="sort">
       <option value="" class="text-gray-700">Choose sorting</option>
       {% for s in filters.sort_options %}
