--- a/app/views/partials/theme/simple/marketplace_setup/index.liquid
+++ b/app/views/partials/theme/simple/marketplace_setup/index.liquid
@@ -1,24 +1,24 @@
-<section class="text-gray-700 body-font">
-  <div class="container items-centermx-auto">
+<section class="body-font">
+  <div class="container items-center mx-auto">
     <div class="mx-auto mb-2 text-center lg:w-4/6 md:w-3/4">
       <h1 class="text-3xl font-medium">Setup your marketplace</h1>
       <p>
-        Please visit <a href="https://stripe.com" target="_blank">https://stripe.com</a>
+        Please visit <a href="https://stripe.com" target="_blank" rel="extrnal noopener">https://stripe.com</a>
         and register your connect account.
         <br>
         This will also create webhooks to your marketplace
       </p>
     </div>
 
-    <div class="w-full p-8 mx-auto mt-10 bg-gray-200 rounded-lg lg:w-2/6 md:w-1/2 md:mt-0">
+    <div class="w-full p-8 mx-auto mt-10 bg-gray-200 rounded-lg md:w-2/3 md:mt-0">
       <form action="/marketplace_setup" method="post">
         {% include 'authenticity_token' %}
 
         {% assign keys = 'mpo_fee_percent,stripe_pk_key,stripe_sk_key,stripe_client_id' | split: ',' %}
         {% for key in keys %}
-          <label class="block mt-3" for="{{key}}">
+          <label class="block mt-3" for="{{ key }}">
             <span class="block">{{ 'app.marketplace_setup.' | append: key | t}}</span>
-            <input name="constants[{{key}}]" type="text" id="{{key}}" value="{{ object[key] }}" class="w-full form-input" />
+            <input name="constants[{{ key }}]" type="text" id="{{ key }}" value="{{ object[key] }}" class="w-full form-input" />
             {% if object.errors[key] %}
               <span class="text-red-800">{{ object.errors[key] }}</span>
             {% endif %}
