--- a/app/views/partials/theme/simple/payments/account/new.liquid
+++ b/app/views/partials/theme/simple/payments/account/new.liquid
@@ -1,3 +1,1 @@
-<a href="{{ connect_url }}">
-  Connect with Stripe
-</a>
+To start selling please <a href="{{ connect_url }}" target="_blank">Connect with Stripe</a>.
