--- a/app/views/partials/theme/simple/payments/account/show.liquid
+++ b/app/views/partials/theme/simple/payments/account/show.liquid
@@ -3,25 +3,25 @@
     <p>
       You have successfully connected your Stripe account, but it is still <b>pending verification</b>.
       You can check details of the verification process and manage account details in the
-      <a class="text-green-600 font-bold underline hover:no-underline" target="_blank" rel="noopener noreferrer" href="/payments/account/stripe-dashboard">
+      <a class="font-bold underline hover:no-underline" target="_blank" rel="noopener noreferrer" href="/payments/account/stripe-dashboard">
         Stripe Account Dashboard
       </a>
     </p>
   {%- elsif account.state == "verified" -%}
     <p>
       You have successfully connected and verified your Stripe account. You can manage account details in the
-      <a class="text-green-600 font-bold underline hover:no-underline" target="_blank" rel="noopener noreferrer" href="/payments/account/stripe-dashboard">
+      <a class="font-bold underline hover:no-underline" target="_blank" rel="noopener noreferrer" href="/payments/account/stripe-dashboard">
         Stripe Account Dashboard
       </a>
     </p>
   {%- else -%}
-    <p class="text-xl mb-2">
-      Verification status: <span class="text-red-500 font-bold">{{ account.state | humanize | downcase }}</span>
+    <p class="mb-2 text-xl">
+      Verification status: <span class="font-bold text-red-500">{{ account.state | humanize | downcase }}</span>
     </p>
 
     <p>
       There is a problem with your bank account verification process. Go to
-      <a class="text-green-600 font-bold underline hover:no-underline" target="_blank" rel="noopener noreferrer" href="/payments/account/stripe-dashboard">
+      <a class="font-bold underline hover:no-underline" target="_blank" rel="noopener noreferrer" href="/payments/account/stripe-dashboard">
         Stripe Account Dashboard
       </a> to find out more.
     </p>
@@ -29,17 +29,17 @@
 
   <hr class="my-6">
 
-  <h3 class="font-bold mb-2 text-lg">Remove Bank Account</h3>
+  <h3 class="mb-2 text-lg font-bold">Remove Bank Account</h3>
   <p class="mb-2">
     When you remove your bank account following things will happen:
   </p>
-  <ul class="list-disc mb-4 ml-4">
-    <li>all your currently active products will be unpublished and no longer visible on the marketplace,</li>
-    <li>you will not be able to publish any new products until you connect with Stripe again and your account is verified.</li>
+  <ul class="mb-4 ml-4 list-disc">
+    <li>All your currently active products will be unpublished and no longer visible on the marketplace.</li>
+    <li>You will not be able to publish any new products until you connect with Stripe again and your account is verified.</li>
   </ul>
 
   <p>
-    <button type="submit" class="btn btn-red" data-remove-merchant-account-button>
+    <button type="submit" class="text-red-800 underline" data-remove-merchant-account-button>
       Delete my Bank Account
     </button>
   </p>
